<resources>
    <string name="app_name">sign_in</string>

    <string name="sign_in_benefit_text">Sign in with Google to save your favourite recipes, get personalised recommendations and more!</string>
    <string name="sign_in_privacy_terms_text">By using Flavoury, you agree to our Privacy Notice and Terms of Use.</string>
    <string name="sign_in_now_button">Sign in with Google</string>
    <string name="sign_in_later_button">Maybe Later</string>
    <string name="sign_in_masked_image_content_desc">Image with cooked food in a bowl.</string>
    <string name="sign_in_error_title">Sign In Error</string>
    <string name="sign_in_error_message">There was an error signing in. Please check your Internet connection and try again.</string>
    <string name="sign_in_error_button_text">Dismiss</string>
</resources>
